turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:14: error: '{' expected but 'case' found.
        	case 0 => 
                ^Turmite:16: error: '}' expected but 'case' found.
        	case 2 => gauche();avance()
                ^Turmite:17: error: '}' expected but 'case' found.
        	case 4 => gauche();gauche();avance()
                ^Turmite:18: error: illegal start of definition
        	case 8 => droite();avance()
                ^Turmite:20: error: eof expected but '}' found.
    }
    ^