turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
    var state = 0;

    def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
        def posTabColor(couleur:Color, tabColor:Array[Color]):Int = {
		var x:Int = 0
		for (i <- 0 to tabColor.length-1) {
			if (tabColor(i)==couleur) {x=i}
		}
		return x
        }
        def bouge(etat:Int) = {
        	etat match
        	case 0 => 
        	case 1 => avance()
        	case 2 => gauche();avance()
        	case 4 => gauche();gauche();avance()
        	case 8 => droite();avance()
        }
    }
